# multi-agent-orchestration

./: .env.example  README.md  main.py  pyproject.toml
RAG/: RAG_REPORT_INTEGRATION.md  pyproject.toml  start_rag_system.sh  test_system.py  workflow_example.py
RAG/.chroma/237fabbf-e242-45e7-a51b-2e262fc014ac/: index_metadata.pickle
RAG/demo-test/: context_demo.py  demo_embeddings.py  multi_agent_context_demo.py  test_context_bridge.py
RAG/ragAgent/: README.md  main.py  pyproject.toml
RAG/ragAgent/.chroma/: chroma.sqlite3
RAG/ragAgent/app/: __main__.py  agent.py  agent_executor.py  test_agent.py
RAG/reportAgent/: README.md  pyproject.toml
RAG/reportAgent/app/: __main__.py  agent.py  agent_executor.py  test_agent.py
RAG/shared/: context.py  import_weather_data.py  import_weather_sample.py  vectorstore.py
RAG/shared/.chroma/816318f4-0647-4242-8916-b3bc6f18d257/: index_metadata.pickle
agentTemplate/: ARCHITECTURE.md  main.py  pyproject.toml
agentTemplate/app/: __init__.py  __main__.py  agent.py  agent_executor.py
agentTemplate/config/: __init__.py  agent_config.py  plugin_config.py
agentTemplate/plugins/: __init__.py  api_plugin.py  base_plugin.py  mcp_plugin.py  plugin_manager.py
argocdAgent/: README.md  pyproject.toml
argocdAgent/app/: __main__.py  agent.py  agent_executor.py
currencyAgent/: .env  README.md  pyproject.toml
currencyAgent/app/: __main__.py  agent.py  agent_executor.py  test_agent.py  test_client.py
frontend/: .dockerignore  DOCKER_SETUP.md  Dockerfile  README.md  docker-compose.yml  index.html  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
mathAgent/: README.md  pyproject.toml
mathAgent/app/: __main__.py  agent.py  agent_executor.py  test_agent.py  test_client.py
orchestrator/: CONTEXT_BRIDGE_IMPLEMENTATION.md  README.md  pyproject.toml
orchestrator/app/: __init__.py  __main__.py  agent_executor.py  agent_management_api.py  context_manager.py  orchestrator.py  test_agent.py
orchestrator_client/: README.md  __main__.py  fastapi_client.py  pyproject.toml
orchestrator_client/utils/: push_notification_listener.py
timeDateAgent/: README.md  pyproject.toml  time_mcp_server.py
timeDateAgent/app/: __init__.py  __main__.py  agent.py  agent_executor.py  test_agent.py
