[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.40.0",
    "langchain>=0.2.11",
    "langchain-community>=0.2.10",
    "langchain-core>=0.2.11",
    "langchain-openai>=0.1.0",
    "langchain-chroma>=0.1.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.5",
    "pypdf>=4.2.0",
    "tiktoken>=0.7.0",
    "reportlab>=4.2.2",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]
