[project]
name = "orchestrator-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.3.0",
    "asyncclick>=8.1.8",
    "sse-starlette>=2.2.1",
    "starlette>=0.46.1",
    "pyjwt>=2.8.0",
    "jwcrypto>=1.5.1",
    "httpx>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
